<resources>
    <string name="app_name">Eye Care</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Username</string>
    <string name="mobile">Mobile</string>
    <string name="country">Country</string>
    <string name="hospital">Hospital</string>
    <string name="proceed">Proceed</string>

    <string name="email_address">E-mail Address</string>
    <string name="code">Code</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_email">Please Enter E-mail Address</string>
    <string name="please_enter_code">Please Enter Your Code</string>
    <string name="reinstall_app">Error Happened Please reinstall Application</string>
    <string name="write_post">Write Post</string>
    <string name="check_in">Check in</string>
    <string name="cant_load_data">Sorry we can\'t load data</string>
    <string name="cant_send_message">Sorry we can\'t send message</string>

    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="thanks">Thanks</string>
    <string name="seach_speaker">Search Speaker</string>
    <string name="session">Session</string>
    <string name="people_interested">People Interested</string>

    <string name="submit">Submit</string>
    <string name="send">Send</string>

    <string name="agenda">Agenda</string>
    <string name="my_agenda">My Agenda</string>

    <string name="main_meeeting_room">Main Meeting Room</string>
    <string name="no_question">No Question Active</string>


    <string name="cant_send_vote">Sorry we can\'t send your vote, Please try again</string>
    <string name="session_added">Session added to your agenda</string>
    <string name="session_added_error">Sorry we can\'t add this Session to your agenda</string>

    <string name="no_message">No Message Found</string>

    <string name="snap_photo">Snap a Photo</string>
    <string name="upload_error">Sorry we can\'t upload data</string>


    <string name="event_admin">Event admins access only</string>
    <string name="send_announcement">Send Announcement</string>

    <string name="choose_recipients">Choose Recipients</string>
    <string name="insert_data">Please insert data to this field</string>
    <string name="notification​_sent​_successfully">Notification​ ​ Sent​ ​ Successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_to_my_agenda">Add To My Agenda</string>
    <string name="added_to_Your_agenda">Added To Your Agenda</string>

    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="user_info">User Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_successfully">Modified successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
