<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer"
    android:padding="20dp"
    android:layoutDirection="ltr"
    tools:context="com.ntam.tech.eyecare.activity.SignIn">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/user_info"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusForward="@+id/et_code"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/mobile"
            android:inputType="number"
            android:digits="0123456789"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />



        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/country"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/et_hospital"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/hospital"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:paddingBottom="10dp"
        android:text="@string/proceed"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signin"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
