<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.ahmed.eyecare.fragment.ShowPhotoFragment">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:layout_above="@+id/container"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/container"
        android:layout_alignParentBottom="true"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_thump_up"
            android:layout_weight="1"
            android:text="@string/like"
            android:id="@+id/tv_like"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/white"
            android:drawableStart="@drawable/chat"
            android:layout_weight="1"
            android:text="@string/comment"
            android:id="@+id/tv_comment"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_share"
            android:padding="10dp"
            android:id="@+id/tv_share"
            android:layout_weight="1"
            android:text="@string/share"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/tv_save"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/border_button"/>
</RelativeLayout>
