<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    tools:context="com.example.ahmed.eyecare.dialog.AddPostDialog">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="write post"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/ed_post"
        android:hint="@string/write_post"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:background="@drawable/border_edittext"
        android:minHeight="150dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:id="@+id/btn_cancel"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/border_button"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_margin="10dp"
            android:background="@drawable/border_button_blue"
            android:textSize="15sp"
            android:id="@+id/btn_post"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

</android.support.v7.widget.CardView>
