<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ntam.tech.eyecare.fragment.AnnouncementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/event_admin"
        android:textColor="@color/header"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="15dp"
        android:background="@color/gray"
        android:text="@string/choose_recipients"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/linear_container">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress"
                android:layout_gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@color/gray"
            android:text="Compose Message"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:hint="Message Title"
            android:background="@drawable/border_button"
            android:layout_margin="10dp"
            android:id="@+id/et_title"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:hint="Message content to be pushed to all selected user."
            android:background="@drawable/border_button"
            android:layout_margin="10dp"
            android:id="@+id/et_body"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/progress_send"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button_blue"
            android:text="@string/send"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/btn_send"/>
    </LinearLayout>
</ScrollView>
